src/snapshots/beans_xml__collection__tests__sb07_entry_key_element_form_snapshot.snap
---
source: src/collection.rs
expression: result
---
{
  "kind": "collection",
  "content": {
    "value": {
      "kind": "map",
      "content": {
        "entries": [
          {
            "span": {
              "start": 5,
              "end": 57
            },
            "key": {
              "kind": "value",
              "content": {
                "span": {
                  "start": 27,
                  "end": 43
                },
                "text": {
                  "value": "k",
                  "span": {
                    "start": 34,
                    "end": 35
                  }
                },
                "value_type": null,
                "placeholders": [],
                "spel_refs": []
              }
            },
            "value": {
              "kind": "value",
              "content": {
                "span": {
                  "start": 19,
                  "end": 20
                },
                "text": {
                  "value": "1",
                  "span": {
                    "start": 19,
                    "end": 20
                  }
                },
                "value_type": null,
                "placeholders": [],
                "spel_refs": []
              }
            },
            "value_type": null
          }
        ],
        "key_type": null,
        "value_type": null,
        "merge": null
      }
    },
    "span": {
      "start": 0,
      "end": 63
    }
  }
}
