src/snapshots/beans_xml__collection__tests__sb07_entry_key_ref_and_value_ref_snapshot.snap
---
source: src/collection.rs
expression: result
---
{
  "kind": "collection",
  "content": {
    "value": {
      "kind": "map",
      "content": {
        "entries": [
          {
            "span": {
              "start": 5,
              "end": 53
            },
            "key": {
              "kind": "ref",
              "content": {
                "value": {
                  "raw": "keyBean",
                  "kind": "bean"
                },
                "span": {
                  "start": 21,
                  "end": 28
                }
              }
            },
            "value": {
              "kind": "ref",
              "content": {
                "value": {
                  "raw": "valueBean",
                  "kind": "bean"
                },
                "span": {
                  "start": 41,
                  "end": 50
                }
              }
            },
            "value_type": null
          }
        ],
        "key_type": null,
        "value_type": null,
        "merge": null
      }
    },
    "span": {
      "start": 0,
      "end": 59
    }
  }
}
