src/snapshots/beans_xml__collection__tests__sb07_props_snapshot.snap
---
source: src/collection.rs
expression: result
---
{
  "kind": "collection",
  "content": {
    "value": {
      "kind": "props",
      "content": {
        "entries": [
          {
            "span": {
              "start": 7,
              "end": 51
            },
            "key": {
              "value": "driver",
              "span": {
                "start": 18,
                "end": 24
              }
            },
            "value": {
              "span": {
                "start": 7,
                "end": 51
              },
              "text": {
                "value": "com.example.Driver",
                "span": {
                  "start": 26,
                  "end": 44
                }
              },
              "value_type": null,
              "placeholders": [],
              "spel_refs": []
            }
          },
          {
            "span": {
              "start": 51,
              "end": 86
            },
            "key": {
              "value": "url",
              "span": {
                "start": 62,
                "end": 65
              }
            },
            "value": {
              "span": {
                "start": 51,
                "end": 86
              },
              "text": {
                "value": "jdbc:example",
                "span": {
                  "start": 67,
                  "end": 79
                }
              },
              "value_type": null,
              "placeholders": [],
              "spel_refs": []
            }
          }
        ],
        "merge": null
      }
    },
    "span": {
      "start": 0,
      "end": 94
    }
  }
}
